# wayback-pdf-diff-prototype

./: README.md
wayback-pdf-diff-prototype/: pyproject.toml  run_test.py  setup.py
wayback-pdf-diff-prototype/BACKEND/: diff.json  pdf_diff_engine.py
wayback-pdf-diff-prototype/pdfdiff/: extractor.py
wayback-pdf-diff-prototype/pdfdiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wayback-pdf-diff-prototype/viewer/: diff_viewer.html
