[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfdiff"
version = "0.1.0"
description = "PDF diff engine prototype for archived documents"
authors = [
  { name="Meet Darji" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pymupdf"
]